--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ align-items: center;
 #skill{margin: 8px 8px 0px 8px;
 }
 .skillcontent{
+    padding-left: 5%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
@@ -217,6 +218,9 @@ align-items: center;
 
         #contact{
             margin: 8% 8% 10x 8px;
+        }
+        .sectionhead{
+            padding-top:5%;
         }
     
     .iconcollections{
